kube/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web-worker
          image: us.gcr.io/micro-raceway-387720/crispy-octo-grp2:v1
          imagePullPolicy: Always
          command: ["bundle", "exec", "rake", "environment", "resque:work", "QUEUE=*", "RAILS_ENV=development"]
        - name: web
          image: us.gcr.io/micro-raceway-387720/crispy-octo-grp2:v1
          imagePullPolicy: Always
          command: ["bundle", "exec", "rails", "s", "-p", "3000", "-b", "0.0.0.0", "-e", "production"]
          ports:
            - containerPort: 3000
