kube/web-service.yml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: LoadBalancer
  selector:
    app: web
  ports:
    - name: web
      port: 80
      targetPort: 3000
