kube/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              service:
                name: web
                port:
                  number: 80
            pathType: Prefix
